--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ set(CMAKE_CXX_STANDARD 17)
 
 cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
-add_subdirectory(StateMachine)
+add_subdirectory(MainLogic)
