--- a/MainLogic/CMakeLists.txt
+++ b/MainLogic/CMakeLists.txt
@@ -10,11 +10,13 @@ set(SOURCES
     src/main.cpp
     src/MainLogic.cpp
     ../external/jsonxx/jsonxx.cc
+    ../ROSEnums.cpp
 )
 
 set(HEADERS
     src/MainLogic.h
     ../external/jsonxx/jsonxx.h
+    ../ROSEnums.h
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
 
