Trajectory Planner added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
 add_subdirectory(MainLogic)
+add_subdirectory(TrajectoryPlanner)
