--- a/ThrusterRegulator/CMakeLists.txt
+++ b/ThrusterRegulator/CMakeLists.txt
@@ -1,12 +1,14 @@
 set(NODENAME ThrusterRegulator)
 
 include_directories(../external)
+include_directories(../)
 
 set(SOURCES
     src/main.cpp
     src/ThrusterRegulator.cpp
     ../external/jsonxx/jsonxx.cc
     ../jsonCommonFunctions.cpp
+    ../NodeBase.cpp
     ../ROSEnums.cpp
 )
 
@@ -14,6 +16,7 @@ set(HEADERS
     src/ThrusterRegulator.h
     ../external/jsonxx/jsonxx.h
     ../jsonCommonFunctions.h
+    ../NodeBase.h
     ../ROSEnums.h
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
