--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,8 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "csignal": "cpp",
+        "codecvt": "cpp"
     }
 }
