--- a/UDPNode/CMakeLists.txt
+++ b/UDPNode/CMakeLists.txt
@@ -1,25 +1,22 @@
 set(NODENAME UDPNode)
 
-include_directories(../external)
 include_directories(../)
+
+set(MODULES 
+    StateMachine
+    Commons
+    Externals
+)
 
 set(SOURCES
     src/main.cpp
     src/UDPNode.cpp
     src/UDPServer.cpp
-    ../external/jsonxx/jsonxx.cc
-    ../jsonCommonFunctions.cpp
-    ../NodeBase.cpp
-    ../ROSEnums.cpp
 )
 
 set(HEADERS
     src/UDPNode.h
     src/UDPServer.h
-    ../external/jsonxx/jsonxx.h
-    ../jsonCommonFunctions.h
-    ../NodeBase.h
-    ../ROSEnums.h
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
 
@@ -28,4 +25,4 @@ include_directories(include ${catkin_INCLUDE_DIRS} )
 add_executable(${NODENAME} ${SOURCES} ${HEADERS})
 set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY build )
 
-target_link_libraries(${NODENAME} ${catkin_LIBRARIES})
+target_link_libraries(${NODENAME} ${MODULES} ${catkin_LIBRARIES})
