--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(NAME Externals)
 
 set(SOURCES
+    EigenQP/EigenQP.cpp
     jsonxx/jsonxx.cc
 )
 
 set(HEADERS
+    EigenQP/EigenQP.h
     jsonxx/jsonxx.h
 )
 
