UDP full duplex

--- a/TrajectoryPlanner/CMakeLists.txt
+++ b/TrajectoryPlanner/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(NODENAME TrajectoryPlanner)
 
 include_directories(../)
+include_directories(/usr/local/include/)
+
 
 set(MODULES 
     Commons
@@ -16,6 +18,8 @@ set(HEADERS
     src/TrajectoryPlanner.h
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
+find_package(ct_core REQUIRED NO_MODULE)
+
 
 include_directories(include ${catkin_INCLUDE_DIRS} )
 
