--- a/Debug/CMakeLists.txt
+++ b/Debug/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(NODENAME TrajectoryPlanner)
+set(NODENAME Debug)
 
 include_directories(../)
 
@@ -9,15 +9,13 @@ set(MODULES
 
 set(SOURCES
     src/main.cpp
-    src/TrajectoryPlanner.cpp
+    src/Debug.cpp
 )
 
 set(HEADERS
-    src/TrajectoryPlanner.h
+    src/Debug.h
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
-find_package(ct_core REQUIRED NO_MODULE)
-
 
 include_directories(include ${catkin_INCLUDE_DIRS} )
 
