--- a/TCPNode/CMakeLists.txt
+++ b/TCPNode/CMakeLists.txt
@@ -1,23 +1,19 @@
-set(NODENAME UDPNode)
+set(NODENAME TCPNode)
 
-include_directories(../external)
 include_directories(../)
+
+set(MODULES 
+    Commons
+    Externals
+)
 
 set(SOURCES
     src/main.cpp
     src/TCPNode.cpp
-    ../external/jsonxx/jsonxx.cc
-    ../jsonCommonFunctions.cpp
-    ../NodeBase.cpp
-    ../ROSEnums.cpp
 )
 
 set(HEADERS
     src/TCPNode.h
-    ../external/jsonxx/jsonxx.h
-    ../jsonCommonFunctions.h
-    ../NodeBase.h
-    ../ROSEnums.h
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
 
@@ -26,4 +22,4 @@ include_directories(include ${catkin_INCLUDE_DIRS} )
 add_executable(${NODENAME} ${SOURCES} ${HEADERS})
 set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY build )
 
-target_link_libraries(${NODENAME} ${catkin_LIBRARIES})
+target_link_libraries(${NODENAME} ${MODULES} ${catkin_LIBRARIES})
