--- a/MainLogic/CMakeLists.txt
+++ b/MainLogic/CMakeLists.txt
@@ -23,6 +23,6 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 add_subdirectory(src)
 
 add_executable(${NODENAME} ${SOURCES} ${HEADERS})
-set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY build )
+set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${NODENAME}/" )
 
 target_link_libraries(${NODENAME} ${catkin_LIBRARIES} ${MODULES})
