--- a/MainLogic/src/CMakeLists.txt
+++ b/MainLogic/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(NODENAME StateMachine)
+set(NAME StateMachine)
 
 
 set(SOURCES
@@ -22,5 +22,6 @@ find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
 
 include_directories(include ${catkin_INCLUDE_DIRS} )
 
-add_library(${NODENAME} ${SOURCES} ${HEADERS})
-set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY build )
+add_library(${NAME} ${SOURCES} ${HEADERS})
+# NODENAME is not a mistake here
+set_target_properties( ${NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${NODENAME}/" )
