--- a/ThrusterRegulator/CMakeLists.txt
+++ b/ThrusterRegulator/CMakeLists.txt
@@ -24,6 +24,6 @@ find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 include_directories(include ${catkin_INCLUDE_DIRS} )
 
 add_executable(${NODENAME} ${SOURCES} ${HEADERS})
-set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY build )
+set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${NODENAME}/" )
 
 target_link_libraries(${NODENAME} ${catkin_LIBRARIES} ${MODULES} Eigen3::Eigen)
