--- a/TCPNode/CMakeLists.txt
+++ b/TCPNode/CMakeLists.txt
@@ -20,6 +20,6 @@ find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
 include_directories(include ${catkin_INCLUDE_DIRS} )
 
 add_executable(${NODENAME} ${SOURCES} ${HEADERS})
-set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY build )
+set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${NODENAME}/" )
 
 target_link_libraries(${NODENAME} ${MODULES} ${catkin_LIBRARIES})
