--- a/TrajectoryPlanner/CMakeLists.txt
+++ b/TrajectoryPlanner/CMakeLists.txt
@@ -22,6 +22,6 @@ find_package(ct_core REQUIRED NO_MODULE)
 include_directories(include ${catkin_INCLUDE_DIRS} )
 
 add_executable(${NODENAME} ${SOURCES} ${HEADERS})
-set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY build )
+set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${NODENAME}/" )
 
 target_link_libraries(${NODENAME} ${MODULES} ${catkin_LIBRARIES})
