--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(HEADERS
     ROSEnums.h
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
 add_subdirectory(Debug)
 add_subdirectory(MainLogic)
@@ -34,6 +35,6 @@ add_subdirectory(external)
 add_library(${NAME} ${SOURCES} ${HEADERS})
 set_target_properties( ${NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${NAME}/" )
 
-target_link_libraries(${NAME})
+target_link_libraries(${NAME} Eigen3::Eigen)
 
 
