--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,8 @@ add_subdirectory(Debug)
 add_subdirectory(EmergencyRestartProtocol)
 add_subdirectory(HealthCheck)
 add_subdirectory(MainLogic)
-add_subdirectory(PositioningSLAM)
-add_subdirectory(TCPNode)
+# add_subdirectory(PositioningSLAM)
+# add_subdirectory(TCPNode)
 add_subdirectory(TrajectoryPlanner)
 add_subdirectory(ThrusterRegulator)
 add_subdirectory(UDPNode)
