frame processing added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,9 @@ add_subdirectory(EmergencyRestartProtocol)
 add_subdirectory(HealthCheck)
 add_subdirectory(MainLogic)
 # add_subdirectory(PositioningSLAM)
-# add_subdirectory(TCPNode)
-add_subdirectory(TrajectoryPlanner)
-add_subdirectory(ThrusterRegulator)
+add_subdirectory(TCPNode)
+# add_subdirectory(TrajectoryPlanner)
+# add_subdirectory(ThrusterRegulator)
 add_subdirectory(UDPNode)
 add_subdirectory(external)
 
