--- a/ThrusterRegulator/CMakeLists.txt
+++ b/ThrusterRegulator/CMakeLists.txt
@@ -22,10 +22,12 @@ set(HEADERS
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(LAPACK)
+find_package(ct_optcon)
 
 include_directories(include ${catkin_INCLUDE_DIRS} )
 
 add_executable(${NODENAME} ${SOURCES} ${HEADERS})
 set_target_properties( ${NODENAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${NODENAME}/" )
 
-target_link_libraries(${NODENAME} ${catkin_LIBRARIES} ${MODULES} Eigen3::Eigen)
+target_link_libraries(${NODENAME} ${catkin_LIBRARIES} ${MODULES} Eigen3::Eigen ct_optcon)
