--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
-include_directories(external .)
+include_directories(external . /opt/ros/noetic/include /opt/ros/noetic/lib)
 
 set(NAME Commons)
 
@@ -32,11 +32,14 @@ add_subdirectory(MainLogic)
 # add_subdirectory(PositioningSLAM)
 add_subdirectory(TCPNode)
 # add_subdirectory(TrajectoryPlanner)
-# add_subdirectory(ThrusterRegulator)
+add_subdirectory(ThrusterRegulator)
 add_subdirectory(UDPNode)
 add_subdirectory(external)
 
 add_library(${NAME} ${SOURCES} ${HEADERS})
 set_target_properties( ${NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${NAME}/" )
 
-target_link_libraries(${NAME} Eigen3::Eigen )
+target_link_libraries(${NAME} Eigen3::Eigen
+    -I/opt/ros/noetic/include -L/opt/ros/noetic/lib
+    -lroscpp -lrostime -lrosconsole -lroscpp_serialization
+)
