--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,5 +77,5 @@
     },
     "ros.distro": "noetic",
     "C_Cpp.codeAnalysis.clangTidy.enabled": true,
-    "C_Cpp.dimInactiveRegions": false
+    "C_Cpp.dimInactiveRegions": true
 }
