--- a/MainLogic/src/CMakeLists.txt
+++ b/MainLogic/src/CMakeLists.txt
@@ -2,25 +2,25 @@ set(NAME StateMachine)
 
 
 set(SOURCES
+    StateMachine/LogicCommonData.cpp
     StateMachine/StateMachine.cpp
     StateMachine/StateStack.cpp
     StateMachine/States/StateBase.cpp
     StateMachine/States/StateIdle.cpp
     StateMachine/States/StateEnums.cpp
-    StateMachine/States/SubStateBase.cpp
 )
 
 set(HEADERS
+    StateMachine/LogicCommonData.h
     StateMachine/StateMachine.h
     StateMachine/StateStack.h
     StateMachine/States/StateBase.h
     StateMachine/States/StateIdle.h
     StateMachine/States/StateEnums.h
-    StateMachine/States/SubStateBase.h
 )
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs rospy)
 
-include_directories(include ${catkin_INCLUDE_DIRS} )
+include_directories(include ${catkin_INCLUDE_DIRS} .)
 
 add_library(${NAME} ${SOURCES} ${HEADERS})
 # NODENAME is not a mistake here
