Debug view addded

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,9 @@ endif()
 if(SIMULATION)
     add_definitions(-DSIMULATION)
 endif()
+if(MANUAL)
+    add_definitions(-DMANUAL)
+endif()
 if(NOSTM)
     add_definitions(-DNOSTM)
 endif()
