--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,14 +54,13 @@ if(NOHYDROPHONES)
 endif()
 
 
-#add_subdirectory(AdditionalCameraProcessor)
+add_subdirectory(AdditionalCameraProcessor)
 add_subdirectory(Debug)
 add_subdirectory(EmergencyRestartProtocol)
 add_subdirectory(HealthCheck)
 add_subdirectory(MainLogic)
 # add_subdirectory(PositioningSLAM)
 add_subdirectory(TCPNode)
-# add_subdirectory(TrajectoryPlanner)
 add_subdirectory(ThrusterRegulator)
 add_subdirectory(UDPNode)
 add_subdirectory(external)
